--- a/src/main/java/GUI.form
+++ b/src/main/java/GUI.form
@@ -1001,7 +1001,7 @@
                                   <Component id="jLabel19" min="-2" pref="75" max="-2" attributes="0"/>
                                   <Component id="jLabel17" min="-2" pref="96" max="-2" attributes="0"/>
                                   <Component id="jLabel20" min="-2" pref="115" max="-2" attributes="0"/>
-                                  <Component id="jLabel22" alignment="0" min="-2" pref="34" max="-2" attributes="0"/>
+                                  <Component id="jLabel22" min="-2" pref="54" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -1064,7 +1064,7 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel17">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Nimi"/>
+                <Property name="text" type="java.lang.String" value="Nimi*"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel18">
@@ -1084,12 +1084,12 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel21">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Kate"/>
+                <Property name="text" type="java.lang.String" value="Kate (%)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel22">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Alv"/>
+                <Property name="text" type="java.lang.String" value="Alv (%)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="uusiTarvikeNimi">
