--- a/src/main/java/GUI.form
+++ b/src/main/java/GUI.form
@@ -692,13 +692,15 @@
             <Component class="javax.swing.JComboBox" name="tuntityyppi">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="4">
+                  <StringArray count="5">
                     <StringItem index="0" value=""/>
                     <StringItem index="1" value="suunnittelu"/>
                     <StringItem index="2" value="ty&#xf6;"/>
                     <StringItem index="3" value="aputy&#xf6;"/>
+                    <StringItem index="4" value="asennus"/>
                   </StringArray>
                 </Property>
+                <Property name="toolTipText" type="java.lang.String" value=""/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
